--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" type="text/css" href="css/layout-custom-style.css?version=20250613" />
   <meta name="description" content="" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <%= htmlWebpackPlugin.options.customStyles %>
 </head>
 <body class="portal">
   <header class="site-header">
@@ -161,5 +162,6 @@
   //]]>
   </script>
   <script xmlns="" type="text/javascript" src="js/intercom/intercom.js"></script>
+  <%= htmlWebpackPlugin.options.customScript %>
 </body>
 </html>
