--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -56,41 +56,155 @@
     <div class="portal-header">
       <div class="portal-header-top">
         <div class="portal-header-top-inner">
-          <h1>Welcome to Bitrise Documentation</h1>
-          <p>Find product documentation, code samples, API & CLI references, and more.</p>
-          <div class="portal-search">
-            <input type="text" placeholder="Search">
+          <div class="portal-header-top-left">
+            <h1>Welcome to Bitrise Documentation</h1>
+            <p>Find product documentation, code samples, API & CLI references, and more.</p>
+            <div class="portal-search">
+              <input name="search" type="text" placeholder="Search">
+            </div>
+          </div>
+          <div class="portal-header-top-right">
+            <img src="css/image/portal-header-illustration.png" alt="Portal header illustration" class="portal-header-illustration" />
           </div>
         </div>
       </div>
       <div class="portal-header-bottom">
-        <h2>Learn how to use Bitrise, the Mobile DevOps Platform tailored for mobile engineering teams</h2>
-        <p>Bitrise's Mobile DevOps Platform equips you for success every step of the way, from planning to monitoring.</p>
-      </div>
-    </div>
-  </main>
-  <div class="site-body">
-    <div class="site-body-container">
-      <div class="site-body-row">
-        <div class="site-content">
-          <main>
-
-
-
-          </main>
-          <footer class="site-footer">
-            <div class="inner">
-              <div class="copyright">
-                © 2025
-              </div>
-              <div class="publication-date">
-                <span class="publication-date-text">Publication date</span><span class="pubdate-delimiter">:</span> <span class="formatted-date"></span>
-              </div>
-            </div>
-          </footer>
+        <div class="portal-header-bottom-inner">
+          <h2>Learn how to use Bitrise, the Mobile DevOps Platform tailored for mobile engineering teams</h2>
+          <p>Bitrise's Mobile DevOps Platform equips you for success every step of the way, from planning to monitoring.</p>
         </div>
       </div>
     </div>
+    <div class="portal-body">
+      <div class="portal-body-inner">
+
+        <div class="portal-card" data-section="bitrise-as-a-platform">
+          <div class="portal-card-header">
+            <h3><a href="" title="">Bitrise as a Platform</a></h3>
+            <p>Learn the fundamentals of your Mobile DevOps platform.</p>
+          </div>
+          <ul class="portal-card-links">
+            <li>
+              <a href="" target="_blank" rel="noopener">Getting started with Bitrise</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Integrations</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Workspaces</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Infrastructure</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Projects</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">User account</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="portal-card" data-section="bitrise-ci">
+          <div class="portal-card-header">
+            <h3><a href="" title="">Bitrise CI</a></h3>
+            <p>Automate builds and tests, and deploy your mobile apps.</p>
+          </div>
+          <ul class="portal-card-links">
+            <li>
+              <a href="" target="_blank" rel="noopener">Getting started with CI</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Code signing</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Workflows and Pipelines</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Testing</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Builds</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Bitrise API</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="portal-card" data-section="bitrise-build-cache">
+          <div class="portal-card-header">
+            <h3><a href="" title="">Build Cache</a></h3>
+            <p>Speed up your builds on any CI/CD platform or in a local environment.</p>
+          </div>
+          <ul class="portal-card-links">
+            <li>
+              <a href="" target="_blank" rel="noopener">Getting started with Build Cache </a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Gradle</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Bazel</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="portal-card" data-section="bitrise-release-management">
+          <div class="portal-card-header">
+            <h3><a href="" title="">Release Management</a></h3>
+            <p>Test and release your mobile apps in an automated and transparent way.</p>
+          </div>
+          <ul class="portal-card-links">
+            <li>
+              <a href="" target="_blank" rel="noopener">Build distribution for testing</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Release management</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Release management</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="portal-card" data-section="bitrise-insights">
+          <div class="portal-card-header">
+            <h3><a href="" title="">Insights</a></h3>
+            <p>Explore analytics, monitor trends, and set up alerts to improve efficiency.</p>
+          </div>
+          <ul class="portal-card-links">
+            <li>
+              <a href="" target="_blank" rel="noopener">Metrics</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Alerts</a>
+            </li>
+            <li>
+              <a href="" target="_blank" rel="noopener">Insights tutorials</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <footer class="site-footer">
+      <div class="inner">
+        <div class="copyright">
+          &copy; <%= htmlWebpackPlugin.options.copyrightYear %> Bitrise Ltd.
+        </div>
+
+        <ul class="footer-links">
+          <li><a href="https://devcenter.bitrise.io/" rel="noopener">Docs</a></li>
+          <li><a href="https://devcenter.bitrise.io/api/v0.1/" target="_blank" rel="noopener">API</a></li>
+          <li><a href="https://bitrise.io/pricing" target="_blank" rel="noopener">Pricing</a></li>
+          <li><a href="https://bitrise.io/platform/devops/security" target="_blank" rel="noopener">Security</a></li>
+          <li><a href="https://bitrise.io/terms" target="_blank" rel="noopener">Terms</a></li>
+          <li><a href="https://bitrise.io/privacy" target="_blank" rel="noopener">Privacy</a></li>
+          <li><a href="https://bitrise.io/cookie-policy" target="_blank" rel="noopener">Cookie</a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
 
 
