portal mobile view

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -56,22 +56,25 @@
     <div class="portal-header">
       <div class="portal-header-top">
         <div class="portal-header-top-inner">
-          <div class="portal-header-top-left">
+          <div class="portal-header-left">
             <h1>Welcome to Bitrise Documentation</h1>
             <p>Find product documentation, code samples, API & CLI references, and more.</p>
             <div class="portal-search">
               <input name="search" type="text" placeholder="Search">
             </div>
           </div>
-          <div class="portal-header-top-right">
+          <div class="portal-header-right">
             <img src="css/image/portal-header-illustration.png" alt="Portal header illustration" class="portal-header-illustration" />
           </div>
         </div>
       </div>
       <div class="portal-header-bottom">
         <div class="portal-header-bottom-inner">
-          <h2>Learn how to use Bitrise, the Mobile DevOps Platform tailored for mobile engineering teams</h2>
-          <p>Bitrise's Mobile DevOps Platform equips you for success every step of the way, from planning to monitoring.</p>
+          <div class="portal-header-left">
+            <h2>Learn how to use Bitrise, the Mobile DevOps Platform tailored for mobile engineering teams</h2>
+            <p>Bitrise's Mobile DevOps Platform equips you for success every step of the way, from planning to monitoring.</p>
+          </div>
+          <div class="portal-header-right"></div>
         </div>
       </div>
     </div>
