--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -29,7 +29,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <%= htmlWebpackPlugin.options.customStyles %>
 </head>
-<body class="portal">
+<body data-subpage="portal" class="portal">
   <header class="site-header">
     <nav class="site-header-navbar navbar navbar-fixed-top">
       <div class="navbar-container">
@@ -83,7 +83,7 @@
 
         <div class="portal-card" data-section="bitrise-as-a-platform">
           <div class="portal-card-header">
-            <h3><a href="" title="">Bitrise as a Platform</a></h3>
+            <h3><a href="/en/bitrise-platform.html" title="Bitrise as a Platform">Bitrise as a Platform</a></h3>
             <p>Learn the fundamentals of your Mobile DevOps platform.</p>
           </div>
           <ul class="portal-card-links">
