sidebars and footer

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -83,131 +83,115 @@
 
         <div class="portal-card" data-section="bitrise-as-a-platform">
           <div class="portal-card-header">
-            <h3><a href="/en/bitrise-platform.html" title="Bitrise as a Platform">Bitrise as a Platform</a></h3>
+            <h3><a href="en/bitrise-platform.html" title="Bitrise as a Platform">Bitrise as a Platform</a></h3>
             <p>Learn the fundamentals of your Mobile DevOps platform.</p>
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="" target="_blank" rel="noopener">Getting started with Bitrise</a>
+              <a href="en/bitrise-platform/getting-started-with-the-platform/signing-up-for-bitrise.html" target="_blank" rel="noopener">Getting started with Bitrise</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Integrations</a>
+              <a href="en/bitrise-platform/connectivity/the-service-credential-user.html" target="_blank" rel="noopener">Integrations</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Workspaces</a>
+              <a href="en/bitrise-platform/workspaces/workspaces-overview.html" target="_blank" rel="noopener">Workspaces</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Infrastructure</a>
+              <a href="#" target="_blank" rel="noopener">Infrastructure</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Projects</a>
+              <a href="en/bitrise-platform/apps/projects-overview.html" target="_blank" rel="noopener">Projects</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">User account</a>
+              <a href="en/bitrise-platform/accounts/accounts-overview.html" target="_blank" rel="noopener">User account</a>
             </li>
           </ul>
         </div>
 
         <div class="portal-card" data-section="bitrise-ci">
           <div class="portal-card-header">
-            <h3><a href="" title="">Bitrise CI</a></h3>
+            <h3><a href="en/bitrise-ci.html" title="Bitrise CI">Bitrise CI</a></h3>
             <p>Automate builds and tests, and deploy your mobile apps.</p>
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="" target="_blank" rel="noopener">Getting started with CI</a>
+              <a href="en/bitrise-ci/getting-started/getting-started.html" target="_blank" rel="noopener">Getting started with CI</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Code signing</a>
+              <a href="en/bitrise-ci/code-signing/android-code-signing.html" target="_blank" rel="noopener">Code signing</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Workflows and Pipelines</a>
+              <a href="en/bitrise-ci/steps-and-workflows/introduction-to-workflows.html" target="_blank" rel="noopener">Workflows and Pipelines</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Testing</a>
+              <a href="en/bitrise-ci/testing/testing-android-apps.html" target="_blank" rel="noopener">Testing</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Builds</a>
+              <a href="en/bitrise-ci/builds/starting-builds.html" target="_blank" rel="noopener">Builds</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Bitrise API</a>
+              <a href="en/bitrise-ci/api/authenticating-with-the-bitrise-api.html" target="_blank" rel="noopener">Bitrise API</a>
             </li>
           </ul>
         </div>
 
         <div class="portal-card" data-section="bitrise-build-cache">
           <div class="portal-card-header">
-            <h3><a href="" title="">Build Cache</a></h3>
+            <h3><a href="en/bitrise-build-cache.html" title="Build Cache">Build Cache</a></h3>
             <p>Speed up your builds on any CI/CD platform or in a local environment.</p>
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="" target="_blank" rel="noopener">Getting started with Build Cache </a>
+              <a href="#" rel="noopener">Getting started with Build Cache </a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Gradle</a>
+              <a href="en/bitrise-build-cache/remote-build-cache-for-gradle.html" rel="noopener">Gradle</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Bazel</a>
+              <a href="en/bitrise-build-cache/remote-build-cache-for-bazel.html" rel="noopener">Bazel</a>
             </li>
           </ul>
         </div>
 
         <div class="portal-card" data-section="bitrise-release-management">
           <div class="portal-card-header">
-            <h3><a href="" title="">Release Management</a></h3>
+            <h3><a href="en/release-management.html" title="Release Management">Release Management</a></h3>
             <p>Test and release your mobile apps in an automated and transparent way.</p>
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="" target="_blank" rel="noopener">Build distribution for testing</a>
+              <a href="en/release-management/build-distribution/build-distribution.html" rel="noopener">Build distribution for testing</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Release management</a>
+              <a href="en/release-management/getting-started-with-release-management/release-management-concepts.html" rel="noopener">Release management</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Release management</a>
+              <a href="en/release-management/release-management-api.html" rel="noopener">Distribution API</a>
             </li>
           </ul>
         </div>
 
         <div class="portal-card" data-section="bitrise-insights">
           <div class="portal-card-header">
-            <h3><a href="" title="">Insights</a></h3>
+            <h3><a href="en/insights.html" title="Insights">Insights</a></h3>
             <p>Explore analytics, monitor trends, and set up alerts to improve efficiency.</p>
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="" target="_blank" rel="noopener">Metrics</a>
+              <a href="en/insights/available-metrics-in-insights/available-metrics-in-insights.html" rel="noopener">Metrics</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Alerts</a>
+              <a href="en/insights/configuring-alerts-in-insights.html" rel="noopener">Alerts</a>
             </li>
             <li>
-              <a href="" target="_blank" rel="noopener">Insights tutorials</a>
+              <a href="en/insights/insights-tutorials/monitoring-and-optimizing-your-slowest-mobile-builds.html" rel="noopener">Insights tutorials</a>
             </li>
           </ul>
         </div>
 
       </div>
     </div>
-    <footer class="site-footer">
-      <div class="inner">
-        <div class="copyright">
-          &copy; <%= htmlWebpackPlugin.options.copyrightYear %> Bitrise Ltd.
-        </div>
-
-        <ul class="footer-links">
-          <li><a href="https://devcenter.bitrise.io/" rel="noopener">Docs</a></li>
-          <li><a href="https://devcenter.bitrise.io/api/v0.1/" target="_blank" rel="noopener">API</a></li>
-          <li><a href="https://bitrise.io/pricing" target="_blank" rel="noopener">Pricing</a></li>
-          <li><a href="https://bitrise.io/platform/devops/security" target="_blank" rel="noopener">Security</a></li>
-          <li><a href="https://bitrise.io/terms" target="_blank" rel="noopener">Terms</a></li>
-          <li><a href="https://bitrise.io/privacy" target="_blank" rel="noopener">Privacy</a></li>
-          <li><a href="https://bitrise.io/cookie-policy" target="_blank" rel="noopener">Cookie</a></li>
-        </ul>
-      </div>
-    </footer>
+    <%= htmlWebpackPlugin.options.footerSnippet %>
   </div>
 
 
