a lot more design

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -36,7 +36,7 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".site-sidebar" aria-expanded="false" aria-controls="navbar"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
           <div id="logotype-container" class="pull-left">
-            <a class="navbar-brand" href="https://devcenter.bitrise.io" target="_blank" rel="noopener"><img id="logotype-pageheader" src="css/image/corporate-logo.svg" alt="Corporate logotype" data-role="logotype" class="logo" /></a>
+            <a class="navbar-brand" href="#" rel="noopener"><img id="logotype-pageheader" src="css/image/corporate-logo.svg" alt="Corporate logotype" data-role="logotype" class="logo" /></a>
           </div>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
@@ -88,22 +88,22 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/bitrise-platform/getting-started-with-the-platform/signing-up-for-bitrise.html" target="_blank" rel="noopener">Getting started with Bitrise</a>
+              <a href="en/bitrise-platform/getting-started-with-the-platform/signing-up-for-bitrise.html" rel="noopener">Getting started with Bitrise</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/connectivity/the-service-credential-user.html" target="_blank" rel="noopener">Integrations</a>
+              <a href="en/bitrise-platform/connectivity/the-service-credential-user.html" rel="noopener">Integrations</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/workspaces/workspaces-overview.html" target="_blank" rel="noopener">Workspaces</a>
+              <a href="en/bitrise-platform/workspaces/workspaces-overview.html" rel="noopener">Workspaces</a>
             </li>
             <li>
-              <a href="#" target="_blank" rel="noopener">Infrastructure</a>
+              <a href="#" rel="noopener">Infrastructure</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/apps/projects-overview.html" target="_blank" rel="noopener">Projects</a>
+              <a href="en/bitrise-platform/apps/projects-overview.html" rel="noopener">Projects</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/accounts/accounts-overview.html" target="_blank" rel="noopener">User account</a>
+              <a href="en/bitrise-platform/accounts/accounts-overview.html" rel="noopener">User account</a>
             </li>
           </ul>
         </div>
@@ -115,22 +115,22 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/bitrise-ci/getting-started/getting-started.html" target="_blank" rel="noopener">Getting started with CI</a>
+              <a href="en/bitrise-ci/getting-started/getting-started.html" rel="noopener">Getting started with CI</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/code-signing/android-code-signing.html" target="_blank" rel="noopener">Code signing</a>
+              <a href="en/bitrise-ci/code-signing/android-code-signing.html" rel="noopener">Code signing</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/steps-and-workflows/introduction-to-workflows.html" target="_blank" rel="noopener">Workflows and Pipelines</a>
+              <a href="en/bitrise-ci/steps-and-workflows/introduction-to-workflows.html" rel="noopener">Workflows and Pipelines</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/testing/testing-android-apps.html" target="_blank" rel="noopener">Testing</a>
+              <a href="en/bitrise-ci/testing/testing-android-apps.html" rel="noopener">Testing</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/builds/starting-builds.html" target="_blank" rel="noopener">Builds</a>
+              <a href="en/bitrise-ci/builds/starting-builds.html" rel="noopener">Builds</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/api/authenticating-with-the-bitrise-api.html" target="_blank" rel="noopener">Bitrise API</a>
+              <a href="en/bitrise-ci/api/authenticating-with-the-bitrise-api.html" rel="noopener">Bitrise API</a>
             </li>
           </ul>
         </div>
