[skip publish] gen ai search and language selector

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -40,6 +40,7 @@
           </div>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
+          <div class="tool-search"></div>
           <ul class="top-nav-menu sm sm-simple">
             <li>
               <a href="https://support.bitrise.io/en/" class="external-top-nav-link" target="_blank">Go to Support</a>
@@ -60,7 +61,7 @@
             <h1>Welcome to Bitrise Documentation</h1>
             <p>Find product documentation, code samples, API & CLI references, and more.</p>
             <div class="portal-search">
-              <input name="search" type="text" placeholder="Search">
+              <input name="search" type="text" placeholder="Search" id="searchWidgetTrigger">
             </div>
           </div>
           <div class="portal-header-right">
