--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -54,6 +54,8 @@
     </nav>
   </header>
   <main>
+    <aside class="site-sidebar"></aside>
+    <div class="site-content"><div class="toolbar"></div></div>
     <div class="portal-header">
       <div class="portal-header-top">
         <div class="portal-header-top-inner">
@@ -240,7 +242,7 @@
   <script src="js/fuse.min.js" type="text/javascript"></script>
   <script src="js/jquery.mark.min.js" type="text/javascript"></script>
   <script src="js/html5.fuse.search.js?version=20250613" type="text/javascript"></script>
-  <script src="js/fuzzydata.js" type="text/javascript"></script>
+  <!-- <script src="js/fuzzydata.js" type="text/javascript"></script> -->
   <script src="js/csh.js" type="text/javascript"></script>
   <script src="js/layout-custom-script.js?version=20250613" type="text/javascript"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-MML-AM_CHTML" async="async"></script>
