--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -63,7 +63,7 @@
             <h1>Welcome to Bitrise Documentation</h1>
             <p>Find product documentation, code samples, API & CLI references, and more.</p>
             <div class="portal-search">
-              <input name="search" type="text" placeholder="Search" id="searchWidgetTrigger">
+              <input name="search" type="text" placeholder="Search" id="searchWidgetTrigger" autocorrect="off" autocapitalize="off" spellcheck="false" aria-label="Search" />
             </div>
           </div>
           <div class="portal-header-right">
@@ -91,7 +91,7 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/bitrise-platform/getting-started-with-the-platform/signing-up-for-bitrise.html" rel="noopener">Getting started with Bitrise</a>
+              <a href="en/bitrise-platform/getting-started/signing-up-for-bitrise.html" rel="noopener">Getting started with Bitrise</a>
             </li>
             <li>
               <a href="en/bitrise-platform/connectivity/the-service-credential-user.html" rel="noopener">Integrations</a>
