Fixed the build cache link

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -145,7 +145,7 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="#" rel="noopener">Getting started with Build Cache </a>
+              <a href="en/bitrise-build-cache/remote-build-caching/getting-started-with-the-build-cache.html" rel="noopener">Getting started with Build Cache </a>
             </li>
             <li>
               <a href="en/bitrise-build-cache/remote-build-cache-for-gradle.html" rel="noopener">Gradle</a>
