Fixing links [skip publish]

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -94,16 +94,16 @@
               <a href="en/bitrise-platform/getting-started/getting-started-with-the-bitrise-platform.html" rel="noopener">Getting started with Bitrise</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/connectivity/the-service-credential-user.html" rel="noopener">Integrations</a>
+              <a href="en/bitrise-platform/integrations/the-service-credential-user.html" rel="noopener">Integrations</a>
             </li>
             <li>
               <a href="en/bitrise-platform/workspaces/workspaces-overview.html" rel="noopener">Workspaces</a>
             </li>
             <li>
-              <a href="#" rel="noopener">Infrastructure</a>
+              <a href="en/bitrise-platform/infrastructure/infrastructure-overview.html" rel="noopener">Infrastructure</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/apps/projects-overview.html" rel="noopener">Projects</a>
+              <a href="en/bitrise-platform/projects/projects-overview.html" rel="noopener">Projects</a>
             </li>
             <li>
               <a href="en/bitrise-platform/accounts/accounts-overview.html" rel="noopener">User account</a>
@@ -124,13 +124,13 @@
               <a href="en/bitrise-ci/code-signing/android-code-signing.html" rel="noopener">Code signing</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/steps-and-workflows/introduction-to-workflows.html" rel="noopener">Workflows and Pipelines</a>
+              <a href="en/bitrise-ci/workflows-and-pipelines/workflows/workflows-overview.html" rel="noopener">Workflows and Pipelines</a>
             </li>
             <li>
               <a href="en/bitrise-ci/testing/testing-android-apps.html" rel="noopener">Testing</a>
             </li>
             <li>
-              <a href="en/bitrise-ci/builds/starting-builds.html" rel="noopener">Builds</a>
+              <a href="/en/bitrise-ci/run-and-analyze-builds/starting-builds/starting-builds-manually.html" rel="noopener">Builds</a>
             </li>
             <li>
               <a href="en/bitrise-ci/api/authenticating-with-the-bitrise-api.html" rel="noopener">Bitrise API</a>
@@ -145,13 +145,13 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/bitrise-build-cache/remote-build-caching/getting-started-with-the-build-cache.html" rel="noopener">Getting started with Build Cache </a>
+              <a href="en/bitrise-build-cache/getting-started-with-the-build-cache/getting-started-with-the-build-cache.html" rel="noopener">Getting started with Build Cache </a>
             </li>
             <li>
-              <a href="en/bitrise-build-cache/remote-build-cache-for-gradle.html" rel="noopener">Gradle</a>
+              <a href="en/bitrise-build-cache/build-cache-for-bazel/configuring-the-build-cache-for-bazel-in-the-bitrise-ci-environment.html" rel="noopener">Gradle</a>
             </li>
             <li>
-              <a href="en/bitrise-build-cache/remote-build-cache-for-bazel.html" rel="noopener">Bazel</a>
+              <a href="en/bitrise-build-cache/build-cache-for-gradle/configuring-the-build-cache-for-gradle-in-the-bitrise-ci-environment.html" rel="noopener">Bazel</a>
             </li>
           </ul>
         </div>
@@ -163,10 +163,10 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/release-management/build-distribution/build-distribution.html" rel="noopener">Build distribution for testing</a>
+              <a href="en/release-management/build-distribution/managing-builds.html" rel="noopener">Build distribution for testing</a>
             </li>
             <li>
-              <a href="en/release-management/getting-started-with-release-management/release-management-concepts.html" rel="noopener">Release management</a>
+              <a href="en/release-management/getting-started-with-release-management/release-management-concepts.html" rel="noopener">Release management key concepts</a>
             </li>
             <li>
               <a href="en/release-management/release-management-api.html" rel="noopener">Distribution API</a>
@@ -181,7 +181,7 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="en/insights/available-metrics-in-insights/available-metrics-in-insights.html" rel="noopener">Metrics</a>
+              <a href="en/insights/available-metrics-in-insights/bitrise-ci-metrics.html" rel="noopener">Metrics</a>
             </li>
             <li>
               <a href="en/insights/configuring-alerts-in-insights.html" rel="noopener">Alerts</a>
