--- a/public/404.html
+++ b/public/404.html
@@ -47,13 +47,13 @@
       <p>&copy; 2024 Bitrise Ltd.</p>
     </div>
     <div class="links">
-      <a target="_blank" rel="noopener" href="https://devcenter.bitrise.io/">Docs</a>
-      <a target="_blank" rel="noopener" href="https://devcenter.bitrise.io/api/v0.1/">API</a>
-      <a target="_blank" rel="noopener" href="https://www.bitrise.io/pricing">Pricing</a>
-      <a target="_blank" rel="noopener" href="https://www.bitrise.io/security_policy">Security</a>
-      <a target="_blank" rel="noopener" href="https://www.bitrise.io/terms">Terms</a>
-      <a target="_blank" rel="noopener" href="https://www.bitrise.io/privacy">Privacy</a>
-      <a target="_blank" rel="noopener" href="https://www.bitrise.io/cookie-policy">Cookie</a>
+      <a target="_blank" rel="noopener" href="https://docs.bitrise.io/">Docs</a>
+      <a target="_blank" rel="noopener" href="https://docs.bitrise.io/en/bitrise-ci/api.html">API</a>
+      <a target="_blank" rel="noopener" href="https://bitrise.io/pricing">Pricing</a>
+      <a target="_blank" rel="noopener" href="https://bitrise.io/platform/devops/security">Security</a>
+      <a target="_blank" rel="noopener" href="https://bitrise.io/terms">Terms</a>
+      <a target="_blank" rel="noopener" href="https://bitrise.io/privacy">Privacy</a>
+      <a target="_blank" rel="noopener" href="https://bitrise.io/cookie-policy">Cookie</a>
     </div>
   </footer>
 
