changing portal link to Bitrise AI FAQ

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -106,7 +106,7 @@
               <a href="en/bitrise-platform/projects/projects-overview.html" rel="noopener">Projects</a>
             </li>
             <li>
-              <a href="en/bitrise-platform/accounts/accounts-overview.html" rel="noopener">User account</a>
+              <a href="https://docs.bitrise.io/en/bitrise-platform/getting-started/ai-faq---how-bitrise-leverages-ai-technologies-in-its-features-and-services.html" rel="noopener">Bitrise AI FAQs</a>
             </li>
           </ul>
         </div>
