[skip publish] added xcode to portal page

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -146,13 +146,13 @@
           </div>
           <ul class="portal-card-links">
             <li>
-              <a href="/en/bitrise-build-cache/getting-started-with-the-build-cache/getting-started-with-the-build-cache.html" rel="noopener">Getting started with Build Cache </a>
+              <a href="/en/bitrise-build-cache/build-cache-for-xcode/configuring-the-build-cache-for-xcode-in-the-bitrise-ci-environment.html" rel="noopener">Build Cache for Xcode</a>
             </li>
             <li>
-              <a href="/en/bitrise-build-cache/build-cache-for-gradle/configuring-the-build-cache-for-gradle-in-the-bitrise-ci-environment.html" rel="noopener">Gradle</a>
+              <a href="/en/bitrise-build-cache/build-cache-for-gradle/configuring-the-build-cache-for-gradle-in-the-bitrise-ci-environment.html" rel="noopener">Build Cache for Gradle</a>
             </li>
             <li>
-              <a href="/en/bitrise-build-cache/build-cache-for-bazel/configuring-the-build-cache-for-bazel-in-the-bitrise-ci-environment.html" rel="noopener">Bazel</a>
+              <a href="/en/bitrise-build-cache/build-cache-for-bazel/configuring-the-build-cache-for-bazel-in-the-bitrise-ci-environment.html" rel="noopener">Build Cache for Bazel</a>
             </li>
           </ul>
         </div>
