[skip publish] adding portal links to migration guides

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -98,13 +98,13 @@
               <a href="/en/bitrise-platform/integrations/about-integrations.html" rel="noopener">Integrations</a>
             </li>
             <li>
+              <a href="/en/bitrise-platform/getting-started/migrating-to-bitrise/migrating-from-jenkins-to-bitrise.html" rel="noopener">Migrating from Jenkins</a>
+            </li>
+            <li>
               <a href="/en/bitrise-platform/workspaces/workspaces-overview.html" rel="noopener">Workspaces</a>
             </li>
             <li>
-              <a href="/en/bitrise-platform/infrastructure/infrastructure-overview.html" rel="noopener">Infrastructure</a>
-            </li>
-            <li>
-              <a href="/en/bitrise-platform/projects/projects-overview.html" rel="noopener">Projects</a>
+              <a href="/en/bitrise-platform/getting-started/migrating-to-bitrise/migrating-from-app-center-to-bitrise.html" rel="noopener">Migrating from App Center</a>
             </li>
             <li>
               <a href="/en/bitrise-platform/getting-started/ai-faq---how-bitrise-leverages-ai-technologies-in-its-features-and-services.html" rel="noopener">Bitrise AI FAQs</a>
