[skip publish] unmask docs for clarity

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -30,7 +30,7 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <%= htmlWebpackPlugin.options.customStyles %>
 </head>
-<body data-subpage="portal" class="portal">
+<body data-clarity-unmask="true" data-subpage="portal" class="portal">
   <header class="site-header">
     <nav class="site-header-navbar navbar navbar-fixed-top">
       <div class="navbar-container">
