[skip publish] more consistent contentUpdate middleware usages across envs

--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -28,9 +28,8 @@
   <link rel="stylesheet" type="text/css" href="/css/layout-custom-style.css?version=20250613" />
   <meta name="description" content="" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-  <%= htmlWebpackPlugin.options.customStyles %>
 </head>
-<body data-clarity-unmask="true" data-subpage="portal" class="portal">
+<body data-subpage="portal" class="portal">
   <header class="site-header">
     <nav class="site-header-navbar navbar navbar-fixed-top">
       <div class="navbar-container">
@@ -195,7 +194,7 @@
 
       </div>
     </div>
-    <%= htmlWebpackPlugin.options.footerSnippet %>
+    <footer class="portal-footer"></footer>
   </div>
 
 
@@ -253,6 +252,5 @@
   //]]>
   </script>
   <script xmlns="" type="text/javascript" src="/js/intercom/intercom.js"></script>
-  <%= htmlWebpackPlugin.options.customScript %>
 </body>
 </html>
